@@ -4,6 +4,11 @@
 Note: This file contains a list changes in the 'default' branch.
 
 
+2020-05-20
+
+ - Refactor to allow csv's get_amount to be overridden. See PR145.
+
+
 2020-05-17
 
  - Applied patch by Martin Michlmayr with fixes for many typos.
